--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <base href="https://kicsikrumpli.github.io/dunderbolt/" />
         <title>__bolt__</title>
     </head>
     <body></body>
