added public url to base index.html and configured trunk.toml

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <base href="https://kicsikrumpli.github.io/dunderbolt/" />
+        <base data-trunk-public-url/>
         <title>__bolt__</title>
     </head>
     <body></body>
